fix(dark/light theme): third fix for theme swithcing on mobile safari. Add background on after element on each section.

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -196,9 +196,25 @@ p {
 
 section {
   padding: 0 40px;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -5;
+    transition: background 400ms ease;
+  }
 }
 
 @mixin dark-mode {
+  section::after {
+    background-color: $bg--dark;
+  }
+
   h1,
   h2,
   h3,
@@ -214,6 +230,10 @@ section {
 }
 
 @mixin light-mode {
+  section::after {
+    background-color: $bg;
+  }
+
   h1,
   h2,
   h3,
